--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.BMI_Calc_Assignment"
         tools:targetApi="31">
         <activity
+            android:name=".ResultPage"
+            android:exported="false" />
+        <activity
             android:name=".CalculatorPage"
             android:exported="false" />
         <activity
